Fixes: ACT-23: Long table names wrapping in Activiti-probe.

--- a/modules/activiti-webapp-probe/src/main/webapp/css/activiti-app.css
+++ b/modules/activiti-webapp-probe/src/main/webapp/css/activiti-app.css
@@ -10,3 +10,7 @@ h1 {
 }
 
 /* STRUCTURE */
+/* Override Core style for long DB table names */
+.yui-gf div.yui-u.first {
+  min-width:18em;
+}
